fix slight jump of active-only annotations

--- a/aawiki/static/aawiki/css/aa.wiki.less
+++ b/aawiki/static/aawiki/css/aa.wiki.less
@@ -581,12 +581,10 @@ blockquote {
         }
 
         & section[typeof="aa:annotation"] {
-            visibility: hidden;
-            height: 0px;
-            padding: 0px;
+            display: none;
 
             &.active {
-                visibility: visible;
+                display: block;
                 background-color: inherit;
             }
         }
